sample/msvc/error/c2001.cpp
// C2001.cpp
// C2001 expected
#include <stdio.h>

int main()
{
    printf("Hello,
             world");
    printf("Hello,\n
             world");
}
